Project

General

Profile

Actions

Bug #20772

closed

bucket check --fix fails with (90) Message too long

Added by Orit Wasserman almost 7 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

After failure when running bucket rm --purge-objects --bypass-gc --inconsistent-index.
Trying to fix the bucket index resulted in (90) Message too long error from the OSD.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #20902: jewel: bucket check --fix fails with (90) Message too longResolvedMatt BenjaminActions
Copied to rgw - Backport #20903: kraken: bucket check --fix fails with (90) Message too longRejectedActions
Actions #1

Updated by Casey Bodley over 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Nathan Cutler over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Orit Wasserman over 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #20902: jewel: bucket check --fix fails with (90) Message too long added
Actions #6

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #20903: kraken: bucket check --fix fails with (90) Message too long added
Actions #7

Updated by Nathan Cutler over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF